FISH-8073 introduce allpermission.policy, use for db config