@@ -409,11 +409,15 @@ if [ ! -z "${DATABASE}" ];then
   fi
 fi
 
+echo 'grant {' >> /tmp/allpermission.policy
+echo 'permission java.security.AllPermission;' >> /tmp/allpermission.policy
+echo '};' >> /tmp/allpermission.policy
+
 VI_SERVER_POLICY_FILE=${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/domains/domain1/config/server.policy
 echo 'grant {' >> ${VI_SERVER_POLICY_FILE}
-if [ "ejb30/sec" == "${test_suite}" ]; then
+if [ "ejb30/sec" == "${test_suite}" ] || [ "webservices12" == "${test_suite}" ]; then
   # ejb30/sec fails with AllPermission
-  echo "Not setting AllPermission for ejb30/sec"
+  echo "Setting permissions for ejb30/sec, not AllPermission"
   echo 'permission java.io.FilePermission "${com.sun.aas.instanceRoot}${/}generated${/}policy${/}-", "read,write,execute,delete";' >> ${VI_SERVER_POLICY_FILE}
   echo 'permission org.apache.derby.security.SystemPermission "engine", "usederbyinternals";' >> ${VI_SERVER_POLICY_FILE}
 else
@@ -424,9 +428,9 @@ echo '};' >> ${VI_SERVER_POLICY_FILE}
 
 VI_APPCLIENT_POLICY_FILE=${CTS_HOME}/vi/$GF_VI_TOPLEVEL_DIR/glassfish/lib/appclient/client.policy
 echo 'grant {' >> ${VI_APPCLIENT_POLICY_FILE}
-if [ "ejb30/sec" == "${test_suite}" ]; then
+if [ "ejb30/sec" == "${test_suite}" ] || [ "webservices12" == "${test_suite}" ]; then
   # ejb30/sec fails with AllPermission
-  echo "Not setting AllPermission for ejb30/sec, enumerate the needed ones"
+  echo "Setting permissions for ejb30/sec, not AllPermission, enumerate the needed ones"
   # If anybody want to continue in specifying all permissions, this is incomplete list:
   echo 'permission org.apache.derby.security.SystemPermission "engine", "usederbyinternals";' >> ${VI_APPCLIENT_POLICY_FILE}
   echo 'permission "java.lang.RuntimePermission" "getenv.*";' >> ${VI_APPCLIENT_POLICY_FILE}
@@ -452,7 +456,7 @@ echo $JAVA_VERSION > ${JT_REPORT_DIR}/.jdk_version
 
 cd  ${TS_HOME}/bin
 export ANT_OPTS="${ANT_OPTS} -Djava.security.manager -Djava.security.policy==${VI_APPCLIENT_POLICY_FILE}"
-ant ${ANT_ARG} config.vi.javadb
+ant ${ANT_ARG} -Djava.security.manager -Djava.security.policy==/tmp/allpermission.policy config.vi.javadb
 ##### configVI.sh ends here #####
 
 ### populateMailbox for suites using mail server - Start ###
